--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -1,222 +1,1 @@
-﻿.body {
-background-color: white;
-margin: 0;
-padding: 0;
-
-@media only screen and (max-width: 600px) {
-/* Điều chỉnh kiểu dáng cho màn hình nhỏ hơn hoặc bằng 600px */
-header {
-padding: 10px;
-}
-
-main {
-padding: 10px;
-}
-
-.container {
-max-width: 100%;
-}
-}
-}
-
-* {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: Arial, Helvetica, sans-serif;
-}
-
-li {
-list-style: none;
-}
-
-ul {
-list-style: none;
-}
-
-a {
-text-decoration: none;
-}
-
-.container {
-max-width: 1200px;
-margin: auto;
-}
-
-header {
-background-color: white;
-text-align: center;
-}
-
-title
-body {
-margin: 0;
-padding: 0;
-background-color: green;
-}
-
-.login-text {
-position: fixed;
-top: 20px;
-right: 20px;
-padding: 10px 20px;
-background-color: white;
-color: green;
-border-radius: 3px;
-cursor: pointer;
-}
-/* nav */
-nav {
-background-color: white;
-}
-
-nav ul {
-display: flex;
-justify-content: space-between;
-align-items: center;
-}
-
-nav ul li a {
-color: white;
-font-size: 20px;
-}
-
-nav ul li :nth-child(1) input {
-height: 30px;
-width: 100%;
-border-radius: 5px;
-border: none;
-padding-left: 6px;
-outline: none;
-}
-
-nav ul li:nth-child(1) button {
-height: 20px;
-padding: 0 8px;
-cursor: pointer;
-background-color: transparent;
-color: black;
-border: 1px solid rgb(70, 68, 68);
-border-radius: 6px;
-}
-
-nav ul li :nth-child(2) button {
-height: 30px;
-padding: 0 10px;
-cursor: pointer;
-background-color: transparent;
-color: black;
-border: 1px solid rgb(70, 68, 68);
-border-radius: 6px;
-transition: all 0.3S ease;
-}
-/*menu bar*/
-.menu-bar {
-background-color: green;
-padding: 40xp;
-}
-
-.menu-bar ul {
-display: flex;
-justify-content: space-between;
-}
-
-.menu-bar ul li a {
-color: white;
-font-size: 16px;
-}
-
-.menu-bar ul li:hover {
-background-color: rgba(45, 238, 2, 0.263);
-}
-
-.menu-bar-container ul li {
-position: relative;
-padding: 12px;
-}
-
-.submenu {
-position: absolute;
-background-color: white;
-width: 100px;
-height: auto;
-left: 0;
-top: 100%;
-padding: 15xp;
-display: none;
-}
-
-.submenu ul {
-display: flex;
-flex-direction: column;
-}
-
-.submenu ul li {
-padding: 6px 0;
-}
-
-.submenu ul li a {
-    font-size: 15px;
-    color: black;
-}
-
-.menu-bar-container ul li:hover .submenu {
-    display: block;
-}
-/*slide*/
-/* .sleder{
-	padding: 20px 0;
-	height: 400xp;
-}
-.slider-container{
-	display: flex;
-	justify-content: space-between;
-}
-.slider-container-left{
-	width: 70%
-}
-.slider-container-left-top{
-	width:100%;
-	height:400xp;
-}
-.slider-container-left-top img{
-	width:100%;
-	height:100%;
-	object-fit: cover;
-}
-.slider-container-left-bottom{
-	display:flex;
-	justify-content: space-between;
-	border: 2px solid white;
-	border-top: none;
-	height:50px;
-}
-.slider-container-left-bottom li{
-	width:20%;
-	text-align:center;
-	cursor:pointer;
-	padding: 6px 0;
-	height:100%;
-	line-height: 40px;
-	position:relative
-}
-.slider-container-left-bottom::before{
-	display:block;
-	content:"";
-	position:absolute;
-	height: 70px;
-	width:1px;
-	background-color: white;
-	right: 0;
-}
-.slider-container-left-bottom li .active{
-	border-top: 4px solid green;
-}
-footer {
-    background-color: #003366;
-    color: white;
-    text-align: center;
-    padding: 10px;
-	background-color: green ;
-}
-*/
+﻿
