--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -10,15 +10,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 	<link href="~/styles/admin/Admin.css" rel="stylesheet" type="text/css" />
-    <asp:ContentPlaceHolder ID="head" runat="server">
-    </asp:ContentPlaceHolder>
+    <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
+    <style>
+        .active {
+            background-color: white;
+            color: green;
+        }
+        .active a label{
+            color: green;
+        }
+        .site-bar-child{
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row">
             <div class="col-2" id="left">
-
-                <div class="p-2">
+                <div class="p-2" id="site-bar-parent">
                     <div style="height:180px">
                         <br />
                         <img src="https://ntthnue.edu.vn/uploads/Images/2017/09/013.jpg" alt="Alternate Text"  width="100%" style="border-radius:20px"/>
@@ -32,49 +42,98 @@
                         <% } %>
                     </div>
 
-                    <div class="mb-4 site-bar-child rounded">
+                    <div class="mb-4 site-bar-child rounded active">
                         <i class="fa-solid fa-building mx-2"></i>
-                        <a href="Room.aspx"><label>Phòng ký túc</label></a>
+                        <a href="Room.aspx" data-ajax="true"><label>Phòng ký túc</label></a>
                     </div>
 
                     <div class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-pen-nib mx-2"></i>
-                        <a href="Infrastructure.aspx"><label>Cơ sở vật chất</label></a>
+                        <a href="Infrastructure.aspx" data-ajax="true"><label>Cơ sở vật chất</label></a>
                     </div>
 
                     <div class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-layer-group mx-2"></i>
-                        <a href="ApplicationList.aspx"><label>Danh sách đơn đăng ký</label></a>
+                        <a href="ApplicationList.aspx" data-ajax="true"><label>Danh sách đơn đăng ký</label></a>
                     </div>
 
                     <div class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-users mx-2"></i>
-                        <a href="StudentList.aspx"><label>Danh sách sinh viên</label></a>
+                        <a href="StudentList.aspx" data-ajax="true"><label>Danh sách sinh viên</label></a>
                     </div>
                     <div class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-users-gear mx-2" height="20" width="20"></i>
-                        <a href="Users.aspx"><label>Tài khoản</label></a>
+                        <a href="Users.aspx" data-ajax="true"><label>Tài khoản</label></a>
                     </div>
 
                     <div style="height:50px"></div>
 
                     <div class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-right-from-bracket mx-2" height="20" width="20"></i>
-                        <a href="../Login.aspx"><label>Đăng xuất</label></a>
+                        <a href="../Login.aspx" data-ajax="true"><label>Đăng xuất</label></a>
                     </div>
                 </div>
 
             </div>
             
-            <div class="col-10">
+            <div class="col-10" id="content">
                 <form id="form1" runat="server">
-                    <div>
-                         <asp:ContentPlaceHolder ID="MyContent" runat="server">
-                         </asp:ContentPlaceHolder>
-                    </div>
+                         <asp:ContentPlaceHolder ID="MyContent" runat="server"></asp:ContentPlaceHolder>
                 </form>
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            // Add active class to the current button (highlight it)
+            var header = document.getElementById("site-bar-parent");
+            var btns = header.getElementsByClassName("site-bar-child");
+            for (var i = 0; i < btns.length; i++) {
+                btns[i].addEventListener("click", function () {
+                    var current = document.getElementsByClassName("active");
+                    if (current.length > 0) {
+                        current[0].className = current[0].className.replace(" active", "");
+                    }
+                    this.className += " active";
+                });
+            }
+
+            // Function to load content via AJAX
+            function loadPage(url) {
+                $.ajax({
+                    url: url,
+                    type: 'GET',
+                    dataType: 'html',
+                    success: function (data) {
+                        var content = $(data).find('#content');
+                        if (content.length > 0) {
+                            history.pushState(null, '', url);
+                            $('#content').html(content.html());
+                            // Thay đổi URL
+                        } else {
+                            var msg = "Sorry but there was an error: No content found.";
+                            $("#MyContent").html(msg);
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        var msg = "Sorry but there was an error: " + xhr.status + " " + xhr.statusText;
+                        $("#MyContent").html(msg);
+                    }
+                });
+            }
+
+            // Handle click events and prevent full page reload
+            $('a[data-ajax="true"]').click(function (e) {
+                e.preventDefault();
+                var url = $(this).attr('href');
+                loadPage(url);  
+            });
+
+            // Load default page content
+            loadPage('Room.aspx');
+        });
+    </script>
 </body>
 </html>
