--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -31,7 +31,7 @@
                 <div class="p-2" id="site-bar-parent">
                     <div style="height:180px">
                         <br />
-                        <img src="https://ntthnue.edu.vn/uploads/Images/2017/09/013.jpg" alt="Alternate Text"  width="100%" style="border-radius:20px"/>
+                        <img src="../datas/images/bannerAdminPage.jpg" alt="Alternate Text"  width="100%" style="border-radius:20px"/>
                     </div>
                     <div class="mb-5">
                         <i class="fa-solid fa-user"></i>
