--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -9,19 +9,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-	<link href="~/styles/admin/Admin.css" rel="stylesheet" type="text/css" />
+	<link href="../styles/admin/Admin.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
     <style>
-        .active {
-            background-color: white;
-            color: green;
-        }
-        .active a label{
-            color: green;
-        }
-        .site-bar-child{
-            font-size: 14px;
-        }
+
+
+
     </style>
 </head>
 <body>
@@ -42,36 +35,36 @@
                         <% } %>
                     </div>
 
-                    <div class="mb-4 site-bar-child rounded active">
+                    <a href="Room.aspx" data-ajax="true" class="mb-4 site-bar-child rounded active">
                         <i class="fa-solid fa-building mx-2"></i>
-                        <a href="Room.aspx" data-ajax="true"><label>Phòng ký túc</label></a>
-                    </div>
+                        <label>Phòng ký túc</label>
+                    </a>
 
-                    <div class="mb-4 site-bar-child rounded">
+                    <a href="Infrastructure.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-pen-nib mx-2"></i>
-                        <a href="Infrastructure.aspx" data-ajax="true"><label>Cơ sở vật chất</label></a>
-                    </div>
+                        <label>Cơ sở vật chất</label>
+                    </a>
 
-                    <div class="mb-4 site-bar-child rounded">      
+                    <a href="ApplicationList.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-layer-group mx-2"></i>
-                        <a href="ApplicationList.aspx" data-ajax="true"><label>Danh sách đơn đăng ký</label></a>
-                    </div>
+                        <label>Danh sách đơn đăng ký</label>
+                    </a>
 
-                    <div class="mb-4 site-bar-child rounded">      
+                    <a href="StudentList.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-users mx-2"></i>
-                        <a href="StudentList.aspx" data-ajax="true"><label>Danh sách sinh viên</label></a>
-                    </div>
-                    <div class="mb-4 site-bar-child rounded">
+                        <label>Danh sách sinh viên</label>
+                    </a>
+                    <a href="Users.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-users-gear mx-2" height="20" width="20"></i>
-                        <a href="Users.aspx" data-ajax="true"><label>Tài khoản</label></a>
-                    </div>
+                        <label>Tài khoản</label>
+                    </a>
 
                     <div style="height:50px"></div>
 
-                    <div class="mb-4 site-bar-child rounded">
+                    <a href="../Login.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-right-from-bracket mx-2" height="20" width="20"></i>
-                        <a href="../Login.aspx" data-ajax="true"><label>Đăng xuất</label></a>
-                    </div>
+                        <label>Đăng xuất</label>
+                    </a>
                 </div>
 
             </div>
