--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -6,17 +6,15 @@ padding: 0;
 @media only screen and (max-width: 600px) {
 /* Điều chỉnh kiểu dáng cho màn hình nhỏ hơn hoặc bằng 600px */
 header {
-padding: 10px;
+    padding: 10px;
 }
 
 main {
-padding: 10px;
+    padding: 10px;
 }
 
 .container {
-max-width: 100%;
-}
-}
+    max-width: 100%;
 }
 
 * {
@@ -27,132 +25,129 @@ font-family: Arial, Helvetica, sans-serif;
 }
 
 li {
-list-style: none;
+    list-style: none;
 }
 
 ul {
-list-style: none;
+    list-style: none;
 }
 
 a {
-text-decoration: none;
+    text-decoration: none;
 }
 
 .container {
-max-width: 1200px;
-margin: auto;
+    max-width: 1200px;
+    margin: auto;
 }
 
 header {
-background-color: white;
-text-align: center;
+    background-color: white;
+    text-align: center;
 }
 
-title
-body {
-margin: 0;
-padding: 0;
-background-color: green;
+title body {
+    margin: 0;
+    padding: 0;
+    background-color: green;
 }
 
 .login-text {
-position: fixed;
-top: 20px;
-right: 20px;
-padding: 10px 20px;
-background-color: white;
-color: green;
-border-radius: 3px;
-cursor: pointer;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: white;
+    color: green;
+    border-radius: 3px;
+    cursor: pointer;
 }
 /* nav */
 nav {
-background-color: white;
+    background-color: white;
 }
 
 nav ul {
-display: flex;
-justify-content: space-between;
-align-items: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 nav ul li a {
-color: white;
-font-size: 20px;
+    color: white;
+    font-size: 20px;
 }
 
 nav ul li :nth-child(1) input {
-height: 30px;
-width: 100%;
-border-radius: 5px;
-border: none;
-padding-left: 6px;
-outline: none;
+    height: 30px;
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    padding-left: 6px;
+    outline: none;
 }
 
 nav ul li:nth-child(1) button {
-height: 20px;
-padding: 0 8px;
-cursor: pointer;
-background-color: transparent;
-color: black;
-border: 1px solid rgb(70, 68, 68);
-border-radius: 6px;
+    height: 20px;
+    padding: 0 8px;
+    cursor: pointer;
+    background-color: transparent;
+    color: black;
+    border: 1px solid rgb(70, 68, 68);
+    border-radius: 6px;
 }
 
 nav ul li :nth-child(2) button {
-height: 30px;
-padding: 0 10px;
-cursor: pointer;
-background-color: transparent;
-color: black;
-border: 1px solid rgb(70, 68, 68);
-border-radius: 6px;
-transition: all 0.3S ease;
+    height: 30px;
+    padding: 0 10px;
+    cursor: pointer;
+    background-color: transparent;
+    color: black;
+    border: 1px solid rgb(70, 68, 68);
+    border-radius: 6px;
+    transition: all 0.3S ease;
 }
 /*menu bar*/
 .menu-bar {
-background-color: green;
-padding: 40xp;
+    background-color: green;
+    padding: 40px;
 }
 
 .menu-bar ul {
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-around;
 }
 
 .menu-bar ul li a {
-color: white;
-font-size: 16px;
+    color: white;
+    font-size: 16px;
 }
 
-.menu-bar ul li:hover {
-background-color: rgba(45, 238, 2, 0.263);
-}
 
-.menu-bar-container ul li {
-position: relative;
-padding: 12px;
+.menu-bar ul li {
+    position: relative;
+    padding: 12px;
 }
 
 .submenu {
-position: absolute;
-background-color: white;
-width: 100px;
-height: auto;
-left: 0;
-top: 100%;
-padding: 15xp;
-display: none;
+    position: absolute;
+    background-color: white;
+    width: 100px;
+    height: auto;
+    left: 0;
+    top: 100%;
+    padding: 15p;
+    display: none;
 }
 
 .submenu ul {
-display: flex;
-flex-direction: column;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .submenu ul li {
-padding: 6px 0;
+    padding: 6px 0;
 }
 
 .submenu ul li a {
@@ -190,9 +185,9 @@ padding: 6px 0;
     border-radius: 3px 0 0 3px;
 }
 
-    .prev:hover, .next:hover {
-        background-color: rgba(0,0,0,0.8);
-    }
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
 
 .text {
     color: #f2f2f2;
