--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -1,27 +1,27 @@
 ﻿.body {
-background-color: white;
-margin: 0;
-padding: 0;
-
+    background-color: white;
+    margin: 0;
+    padding: 0;
+}
 @media only screen and (max-width: 600px) {
-/* Điều chỉnh kiểu dáng cho màn hình nhỏ hơn hoặc bằng 600px */
-header {
-    padding: 10px;
-}
+    /* Điều chỉnh kiểu dáng cho màn hình nhỏ hơn hoặc bằng 600px */
+    header {
+        padding: 10px;
+    }
 
-main {
-    padding: 10px;
-}
+    main {
+        padding: 10px;
+    }
 
-.container {
-    max-width: 100%;
+    .container {
+        max-width: 100%;
+    }
 }
-
 * {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 li {
@@ -163,6 +163,7 @@ nav ul li :nth-child(2) button {
     max-width: 1000px;
     position: relative;
     margin: auto;
+    height: 80vh;
 }
 
 .prev, .next {
