cap nhat fe can bo va users

--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -54,12 +54,16 @@
                         <i class="fa-solid fa-users mx-2"></i>
                         <label>Danh sách sinh viên</label>
                     </a>
-                    <a href="Users.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
+                    <a href="StaffList.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-users-gear mx-2" height="20" width="20"></i>
+                        <label>Danh sách cán bộ</label>
+                    </a>
+                    <a href="Users.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
+                        <i class="fa-solid fa-address-card mx-2" height="20" width="20"></i>
                         <label>Tài khoản</label>
                     </a>
 
-                    <div style="height:50px"></div>
+                    <div style="height:20px"></div>
 
                     <a href="../Login.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-right-from-bracket mx-2" height="20" width="20"></i>
