--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -110,7 +110,7 @@ nav ul li :nth-child(2) button {
 /*menu bar*/
 .menu-bar {
     background-color: green;
-    padding: 40px;
+    padding: 5px;
 }
 
 .menu-bar ul {
@@ -136,7 +136,7 @@ nav ul li :nth-child(2) button {
     height: auto;
     left: 0;
     top: 100%;
-    padding: 15p;
+    padding: 15px;
     display: none;
 }
 
@@ -147,7 +147,7 @@ nav ul li :nth-child(2) button {
 }
 
 .submenu ul li {
-    padding: 6px 0;
+    padding: 5px 0;
 }
 
 .submenu ul li a {
@@ -160,7 +160,6 @@ nav ul li :nth-child(2) button {
 }
 
 .slideshow-container {
-    max-width: 1000px;
     position: relative;
     margin: auto;
     height: 80vh;
@@ -237,6 +236,20 @@ nav ul li :nth-child(2) button {
     }
 }
 
+.mySlides {
+    display: none;
+    width: 100%;
+    height: 80vh; /* Chiều cao mong muốn */
+    overflow: hidden;
+}
+
+.mySlides img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+}
+
 @media only screen and (max-width: 300px) {
     .prev, .next, .text {
         font-size: 11px
@@ -275,10 +288,12 @@ post {
 .full-content {
     display: none;
 }
+
 footer {
     background-color: #003366;
     color: white;
     text-align: center;
     padding: 10px;
+    margin-top: 20px;
     background-color: green;
 }
