--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
@@ -1,7 +1,38 @@
 ﻿body {
 }
 
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.content{
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+}
+
 .ggMap{
     width: 100%;
     height: 450px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+@media (min-width: 992px) {
+    .col-lg-5 {
+        flex: 0 0 auto;
+        width: 41.66666667%;
+    }
+
+    .col-lg-7 {
+        flex: 0 0 auto;
+        width: 58.33333333%;
+    }
 }
