--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
@@ -1,19 +1,33 @@
 ﻿body {
 }
 
-.row{
+.container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.row {
     display: flex;
     flex-wrap: wrap;
 }
 
-.content{
+    .row > * {
+        width: 100%;
+        max-width: 100%;
+    }
+
+.content {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
 }
 
-.ggMap{
+.ggMap {
     width: 100%;
     height: 450px;
+}
+
+.form-group {
+    margin-bottom: 1rem;
 }
 
 .form-control {
@@ -23,16 +37,41 @@
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
+    border: 1px solid #ced4da;
+    border-radius: .375rem;
 }
 
-@media (min-width: 992px) {
-    .col-lg-5 {
+.btn {
+    display: inline-block;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    border: none;
+    border-radius: .375rem;
+}
+
+.btn-success {
+    background-color: forestgreen;
+}
+
+@media (min-width: 576px) {
+    .col-5 {
         flex: 0 0 auto;
         width: 41.66666667%;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 
-    .col-lg-7 {
+    .col-7 {
         flex: 0 0 auto;
         width: 58.33333333%;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 }
