--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
@@ -16,6 +16,10 @@
         max-width: 100%;
     }
 
+.subTitle{
+    margin-bottom: .5rem;
+}
+
 .content {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
