fix reload when click button, paging and show list room

--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -98,25 +98,28 @@
             }
 
             // Function to load content via AJAX
-            function loadPage(url) {
+            function loadPage(url, push = true) {
                 $.ajax({
                     url: url,
                     type: 'GET',
                     dataType: 'html',
                     success: function (data) {
-                        var content = $(data).find('#content');
+                        var content = $(data).find('#content').html();
                         if (content.length > 0) {
-                            history.pushState(null, '', url);
-                            $('#content').html(content.html());
-                            // Thay đổi URL
+                            if (push) {
+                                history.pushState({ path: url }, '', url);
+                            }
+                            $('#content').html(content);
+                            // Reinitialize events or plugins for new content
+                            reinitializeEvents();
                         } else {
                             var msg = "Sorry but there was an error: No content found.";
-                            $("#MyContent").html(msg);
+                            $("#content").html(msg);
                         }
                     },
                     error: function (xhr, status, error) {
                         var msg = "Sorry but there was an error: " + xhr.status + " " + xhr.statusText;
-                        $("#MyContent").html(msg);
+                        $("#content").html(msg);
                     }
                 });
             }
@@ -125,8 +128,27 @@
             $('a[data-ajax="true"]').click(function (e) {
                 e.preventDefault();
                 var url = $(this).attr('href');
-                loadPage(url);  
+                loadPage(url);
             });
+
+            // Handle browser back and forward buttons
+            window.onpopstate = function (event) {
+                if (event.state) {
+                    loadPage(event.state.path, false);
+                }
+            };
+
+            // Function to reinitialize events or plugins for new content
+            function reinitializeEvents() {
+                // Example: Reinitialize click event for buttons inside loaded content
+                $('#content button').click(function (e) {
+                    e.preventDefault();
+                    var url = $(this).attr('data-url');
+                    if (url) {
+                        loadPage(url);
+                    }
+                });
+            }
 
             // Load default page content
             loadPage('Room.aspx');
