--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/admin/Admin.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/admin/Admin.css
@@ -80,3 +80,8 @@ th {
 .active label {
     color: green;
 }
+
+.gridview-row:hover {
+    background-color: #f1f1f1; /* Màu nền khi hover */
+    cursor: pointer; /* Hiệu ứng con trỏ */
+}
