--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -21,7 +21,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-2" id="left">
-                <div class="p-7" id="site-bar-parent">
+                <div class="p-8" id="site-bar-parent" style="height:100%">
                     <div style="height:180px">
                         <br />
                         <img src="../datas/images/bannerAdminPage.jpg" alt="Alternate Text"  width="100%" style="border-radius:20px"/>
@@ -62,9 +62,10 @@
                         <i class="fa-solid fa-address-card mx-2" height="20" width="20"></i>
                         <label>Tài khoản</label>
                     </a>
-
-                    <div style="height:20px"></div>
-
+                    <a href="UserList.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
+                        <i class="fa-solid fa-address-card mx-2" height="20" width="20"></i>
+                        <label>Danh sách người dùng</label>
+                    </a>
                     <a href="../Login.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">
                         <i class="fa-solid fa-right-from-bracket mx-2" height="20" width="20"></i>
                         <label>Đăng xuất</label>
