--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -152,7 +152,7 @@
             }
 
             // Load default page content
-            //loadPage('Room.aspx');
+            loadPage('Room.aspx');
         });
     </script>
 </body>
