--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Contact.css
@@ -10,16 +10,6 @@
     display: flex;
     flex-wrap: wrap;
 }
-
-    .row > * {
-        width: 100%;
-        max-width: 100%;
-    }
-
-.subTitle{
-    margin-bottom: .5rem;
-}
-
 .content {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
@@ -71,11 +61,11 @@
         padding-left: 1rem;
         padding-right: 1rem;
     }
-
-    .col-7 {
-        flex: 0 0 auto;
-        width: 58.33333333%;
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+}
+.row content-icon-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 50px;
 }
