--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -288,6 +288,60 @@ post {
 .full-content {
     display: none;
 }
+/* Định dạng phần header */
+header {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+    header h1 {
+        font-size: 2.5em;
+        margin-bottom: 10px;
+    }
+
+    header p {
+        font-size: 1.2em;
+        color: #777;
+    }
+main {
+    max-width: 800px;
+    margin: 0 auto;
+    background: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+/* Định dạng phần bài viết */
+article {
+    margin-bottom: 20px;
+}
+
+    article h2 {
+        font-size: 1.8em;
+        margin-bottom: 10px;
+        color: #333;
+    }
+
+    article p {
+        margin-bottom: 20px;
+    }
+.image-container {
+    text-align: center;
+    margin: 20px 0;
+}
+
+    .image-container img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+    }
+
+    .image-container .image-caption {
+        font-size: 0.9em;
+        color: #555;
+        margin-top: 10px;
+    }
+
 
 footer {
     background-color: #003366;
