--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Admin/Admin.Master
@@ -45,7 +45,7 @@
                         <label>Cơ sở vật chất</label>
                     </a>
 
-                    <a href="ApplicationList.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">      
+                    <a href="Wish.aspx" data-ajax="true" class="mb-4 site-bar-child rounded">      
                         <i class="fa-solid fa-layer-group mx-2"></i>
                         <label>Danh sách đơn đăng ký</label>
                     </a>
