--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/HomePage.css
@@ -1,9 +1,4 @@
-﻿.body {
-    background-color: white;
-    margin: 0;
-    padding: 0;
-}
-@media only screen and (max-width: 600px) {
+﻿@media only screen and (max-width: 600px) {
     /* Điều chỉnh kiểu dáng cho màn hình nhỏ hơn hoặc bằng 600px */
     header {
         padding: 10px;
@@ -17,146 +12,11 @@
         max-width: 100%;
     }
 }
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-li {
-    list-style: none;
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-.container {
-    max-width: 1200px;
-    margin: auto;
-}
-
-header {
-    background-color: white;
-    text-align: center;
-}
 
 title body {
     margin: 0;
     padding: 0;
     background-color: green;
-}
-
-.login-text {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: white;
-    color: green;
-    border-radius: 3px;
-    cursor: pointer;
-}
-/* nav */
-nav {
-    background-color: white;
-}
-
-nav ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-nav ul li a {
-    color: white;
-    font-size: 20px;
-}
-
-nav ul li :nth-child(1) input {
-    height: 30px;
-    width: 100%;
-    border-radius: 5px;
-    border: none;
-    padding-left: 6px;
-    outline: none;
-}
-
-nav ul li:nth-child(1) button {
-    height: 20px;
-    padding: 0 8px;
-    cursor: pointer;
-    background-color: transparent;
-    color: black;
-    border: 1px solid rgb(70, 68, 68);
-    border-radius: 6px;
-}
-
-nav ul li :nth-child(2) button {
-    height: 30px;
-    padding: 0 10px;
-    cursor: pointer;
-    background-color: transparent;
-    color: black;
-    border: 1px solid rgb(70, 68, 68);
-    border-radius: 6px;
-    transition: all 0.3S ease;
-}
-/*menu bar*/
-.menu-bar {
-    background-color: green;
-    padding: 5px;
-}
-
-.menu-bar ul {
-    display: flex;
-    justify-content: space-around;
-}
-
-.menu-bar ul li a {
-    color: white;
-    font-size: 16px;
-}
-
-
-.menu-bar ul li {
-    position: relative;
-    padding: 12px;
-}
-
-.submenu {
-    position: absolute;
-    background-color: white;
-    width: 100px;
-    height: auto;
-    left: 0;
-    top: 100%;
-    padding: 15px;
-    display: none;
-}
-
-.submenu ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.submenu ul li {
-    padding: 5px 0;
-}
-
-.submenu ul li a {
-    font-size: 15px;
-    color: black;
-}
-
-.menu-bar-container ul li:hover .submenu {
-    display: block;
 }
 
 .slideshow-container {
@@ -288,23 +148,22 @@ post {
 .full-content {
     display: none;
 }
-/* Định dạng phần header */
-header {
+/* Định dạng phần title */
+.title {
     width: 100%;
     text-align: center;
-    margin-bottom: 40px;
 }
 
-    header h1 {
+    .title h1 {
         font-size: 2.5em;
         margin-bottom: 10px;
     }
 
-    header p {
+    .title p {
         font-size: 1.2em;
         color: #777;
     }
-main {
+.main_content {
     max-width: 800px;
     margin: 0 auto;
     background: #fff;
@@ -312,17 +171,17 @@ main {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 /* Định dạng phần bài viết */
-article {
+.main_content {
     margin-bottom: 20px;
 }
 
-    article h2 {
+    .main_content h2 {
         font-size: 1.8em;
         margin-bottom: 10px;
         color: #333;
     }
 
-    article p {
+    .main_content p {
         margin-bottom: 20px;
     }
 .image-container {
@@ -341,13 +200,3 @@ article {
         color: #555;
         margin-top: 10px;
     }
-
-
-footer {
-    background-color: #003366;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
-    background-color: green;
-}
