--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Style.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/Style.css
@@ -85,7 +85,7 @@ img {
 
 .nav_link {
     color: white;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .nav_toggle {
@@ -133,6 +133,7 @@ content-icon-container {
 
     .nav_toggle {
         display: block;
+        margin-right: 12px;
     }
 
     .show_menu .nav_item {
