--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Home.Master
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/Home.Master
@@ -4,6 +4,8 @@
 
 <html>
 <head runat="server">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
