--- a/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/WishPage.css
+++ b/XDPTPM-01-NHOM04-DOAN-HK2-23-24/styles/WishPage.css
@@ -1,11 +1,4 @@
-﻿body {
-    font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
+﻿.container {
     max-width: 600px;
     margin: 50px auto;
     background-color: #fff;
@@ -14,7 +7,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
+.page_title {
     text-align: center;
     margin-bottom: 40px;
 }
